--- a/src/modules/button.module/module.html
+++ b/src/modules/button.module/module.html
@@ -60,7 +60,7 @@
 {# Button #}
 
 <div class="button-wrapper">
-  <a class="button" href="{{ href }}"
+<a class="button {{module.button_background}}" href="{{ href }}"
   {% if module.link.open_in_new_tab %}target="_blank"{% endif %}
   {% if rel %}rel="{{ rel|join(" ") }}"{% endif %}
   >
